# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "hn-eda"
version = "0.1.0"
description = "Basic python repository template"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/basic-python-repository-template"
repository = "https://github.com/ClementBM/basic-python-repository-template"
keywords = ["mykeyword", "mykeyword", "mykeyword"]
include = [
    "LICENSE",
]
# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.0"
tqdm = "^4.62.3"
nltk = "^3.6.7"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
coverage = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"